# OrcaSlicer_FU_BambuLab

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_release.bat  build_release_macos.sh  build_release_vs.bat  build_release_vs2022.bat
.github/actions/apt-install-deps/: action.yml
.github/workflows/: build_all.yml  build_linux_portable.yml  build_macos_bridge.yml  build_orca.yml  build_windows_bridge.yml  my_build_all.yml
scripts/: apply_pjarczak_linux_bridge_orca.py  generate_linux_payload_manifest.py  run_gettext.bat
scripts/linux.d/: debian
shared/BambuBridge/Auth/: BridgeAuthPayload.hpp
src/: CMakeLists.txt
src/libslic3r/: PresetBundle.cpp  PrintApply.cpp  PrintConfig.cpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: DeviceManager.cpp  DeviceManager.hpp  GUI_App.cpp  GUI_App.hpp  HMS.cpp  HttpServer.cpp  HttpServer.hpp  MediaPlayCtrl.cpp  MediaPlayCtrl.h  PartPlate.cpp  PartPlate.hpp  Plater.cpp  SelectMachine.cpp  SendToPrinter.cpp  WebGuideDialog.cpp  WebUserLoginDialog.cpp  WebUserLoginDialog.hpp  wxMediaCtrl2.cpp  wxMediaCtrl2.h
src/slic3r/Utils/: BBLCloudServiceAgent.cpp  BBLCloudServiceAgent.hpp  BBLNetworkPlugin.cpp  BBLNetworkPlugin.hpp  BBLPrinterAgent.cpp  BBLPrinterAgent.hpp  Http.cpp  ICloudServiceAgent.hpp  NetworkAgent.cpp  NetworkAgent.hpp  NetworkAgentFactory.cpp  OrcaCloudServiceAgent.cpp  OrcaCloudServiceAgent.hpp  PresetUpdater.cpp
tools/pjarczak_bambu_linux_host/: CMakeLists.txt  LinuxPluginHost.cpp  main.cpp  package_linux_host_runtime.sh  pjarczak-bambu-linux-host-wrapper
tools/pjarczak_bambu_runtime/macos/: pjarczak_install_macos_runtime.sh  pjarczak_verify_macos_runtime.sh
tools/pjarczak_bambu_runtime/release/: assemble_windows_runtime_bundle.ps1
tools/pjarczak_bambu_runtime/wsl/: install_runtime.ps1  pjarczak_wsl_run_host.sh  (+1 more)
(+9 files in other folders)
